Add shell script to mount xlibs and xterm binary into new namespace. Also add a small wrapper binary which creates the new namespace. vmtcl.c is removed from the Makefile but the source file is present as a reference.

--- a/vmctl/Makefile
+++ b/vmctl/Makefile
@@ -1,10 +1,11 @@
-EXE_NAME = vmctl
+EXE_NAME = newns
 CROSS_COMPILE_armv7 = /srv/cs523/build/toolchain/cs07q3armel/build/arm-2007q3/bin/arm-none-linux-gnueabi-gcc
 COMPILER = ${CROSS_COMPILE_armv7}
 
 all: ${EXE_NAME}
 
-${EXE_NAME}: vmctl.c
-	${COMPILER} -o ${EXE_NAME} vmctl.c
+${EXE_NAME}: newns.c	
+	${COMPILER} -o newns newns.c
+
 clean:
 	rm ${EXE_NAME}
